# bucketlist-backend

./: .env-example  Cargo.toml  README.md
.github/workflows/: check.yml  deploy-dev.yml  rust.yml
migrations/2023-04-08-120531_create_users/: up.sql
migrations/2023-05-21-091812_add-status-to-users/: down.sql  up.sql
migrations/2023-05-21-155745_add_destinations/: down.sql  up.sql
migrations/2023-05-22-063313_add_sessions/: down.sql  up.sql
migrations/2023-05-23-142314_add_bucketlist_items/: down.sql  up.sql
postman/: Bucketlist APPpostman_collection.json  Local.postman_environment.json
src/: main.rs
src/applib/: config.rs  errors.rs
src/db/: mod.rs  schema.rs
src/db/model/: bucketlist_item.rs  destination.rs  mod.rs  session.rs  user.rs
src/db/predicates/: destination.rs
src/dto/: bucketlist_item_with_destination_dto.rs  bucketlist_item_with_private_list_dto.rs  get_user_dto.rs  login_form.rs  login_token_claims.rs  mod.rs  user_change_password_dto.rs
src/errors/: mod.rs
src/guard/: admin.rs  employee.rs  mod.rs
src/handlers/: login_handlers.rs  mod.rs  user_handlers.rs
src/middleware/: auth_middleware.rs
src/model/: mod.rs  user.rs
src/routes/: login.rs  mod.rs  user.rs
src/routes/admin/: bucketlist_item.rs  destination.rs  mod.rs  user.rs
src/routes/common/: user.rs
src/routes/employee/: bucketlist_item.rs  destination.rs  mod.rs  user.rs
src/service/: login_service.rs  mod.rs  user_service.rs
src/service/admin/: bucketlist_service.rs  destination_service.rs  mod.rs  user_service.rs
src/service/employee/: bucketlist_service.rs  destination_service.rs  mod.rs  user_service.rs
