[package]
name = "hello-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
bcrypt = "0.14.0"
diesel = { version = "2.0.3", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = "1.27.0"
